# xr

./: .gitignore  CMakeLists.txt  LICENSE  windows.bat
include/xr/: coding_standard.h  config.h  defines.h  doxy.h
include/xr/com/: unknown.h
include/xr/core/: allocator.h  assert.h  bit_packing.h  bit_utils.h  console.h  date.h  intrusive_ptr.h  log.h  mem_utils.h  memory.h  refcount.h  runnable.h  static_profile.h  string_utils.h  test.h  time.h  unknown.h
include/xr/core/allocators/: linear.h
include/xr/core/containers/: hash.h  stack.h  vector.h
include/xr/core/detail/: qs_base.h
include/xr/core/hash/: crc.h  crc32c.h  md5.h  sha.h
include/xr/core/io/: file.h
include/xr/core/random/: crypt_rand.h  mersenne.h
include/xr/core/threading/: atomic.h  barrier.h  blocking_queue.h  blocking_stack.h  monitor.h  mutex.h  rw_lock.h  thread.h  tls.h
include/xr/platform/: gcc.h  linux.h  osx.h  vc.h  windows.h  windows_lite.h
include/xr/services/: scheduling.h
setup/: BuildSetup.gcc.cmake  BuildSetup.pc-mingwgcc5-x64-cov.cmake  BuildSetup.pc-mingwgcc5-x64.cmake  BuildSetup.pc-mingwgcc5-x86-cov.cmake  BuildSetup.pc-mingwgcc5-x86.cmake  BuildSetup.pc-vs14-x64-cov.cmake  BuildSetup.pc-vs14-x64.cmake  BuildSetup.pc-vs14-x86-cov.cmake  BuildSetup.pc-vs14-x86.cmake  BuildSetup.vs.cmake  DoxygenLayout.xml  ToolSetup.bat  doxyfile-pc
setup/template_files/: sample.cpp  sample.h  sample_test.cpp
source/: CMakeLists.txt
source/test/: CMakeLists.txt  main.cpp
source/test/core/: CMakeLists.txt  allocator_test.cpp  assert_test.cpp  atomic_test.cpp  bit_packing_test.cpp  bit_utils_test.cpp  blocking_stack_test.cpp  bocking_queue_test.cpp  com_test.cpp  container_test.cpp  hash_test.cpp  io_test.cpp  linear_allocator_test.cpp  log_test.cpp  mem_utils_test.cpp  memory_test.cpp  mersenne_test.cpp  mutex_test.cpp  refcount_test.cpp  string_utils_test.cpp  test_test.cpp  thread_test.cpp  time_test.cpp
source/test/services/: CMakeLists.txt  scheduling_test.cpp
source/xr/: CMakeLists.txt
source/xr/core/: CMakeLists.txt  allocator.cpp  assert.cpp  barrier.cpp  bit_packing.cpp  bit_utils.cpp  console.cpp  containers.cpp  crc.cpp  crc32c.cpp  crypt_rand.cpp  date.cpp  defines.cpp  file.cpp  linear.cpp  log.cpp  md5.cpp  mem_utils.cpp  memory.cpp  mersenne.cpp  monitor.cpp  mutex.cpp  qs_base.cpp  refcount.cpp  rw_lock.cpp  sha.cpp  string_utils.cpp  test.cpp  thread.cpp  time.cpp  tls.cpp
source/xr/services/: CMakeLists.txt  scheduling.cpp
