#------------------------------------------------------------------------------
# add the projects / sub dirs
#------------------------------------------------------------------------------

# NOTE: Do not add defines / config here, go up a dir. Putting things here, will
# keep them from being seen by the test cpp files.

add_subdirectory (core)
add_subdirectory (services)

